--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -13,7 +13,7 @@
      <link rel="stylesheet" href="../css/styleM.css">
      <link rel="stylesheet" href="../css/quiz.css">
      <link rel="stylesheet" href="../css/podium.css">
-    <title>Bulletin Homepage</title>
+    <title>Community Contributions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style>
