--- a/profile.html
+++ b/profile.html
@@ -9,8 +9,8 @@
   <title>Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/profile.css">
-  <link rel="stylesheet" href="./css/styleM.css" />
+  <link rel="stylesheet" href="css/profile.css">
+  <link rel="stylesheet" href="css/styleM.css" />
   <!-- for icons in footer -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,7 +19,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
   </style>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
 
     <div class="main-container">
 
-      <div class="container about" id="about-me">
+      <div class="container about" id="about-me" style="margin-top:5vh;">
         <div>
           <h2 style="font-size: 80px;">Profile</h2>
         </div>
@@ -95,7 +95,7 @@
 
     </div>
 
-    <div class="row">
+    <div class="row" style="margin-top:15vh;">
       <footer class="footer">
         <div class="container-fluid" style="text-align:center;">
 
