--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -60,15 +60,15 @@
           <div class="result_dropbox row">
             <div class="col-12">
               <br><br>
-              <label for="products"> Category:</label>
-            <select name="products" id="products" class="form-select" aria-label="Default select example">
-                 <option value="babypacifier" selected>Baby Pacifier</option>
-                 <option value="milkbottle">Milk Bottle</option>
-                <option value="pram">Pram</option>
-                <option value="stretchmark">Stretch Mark</option>
-                <option value="vitamin">Vitamin</option>
-                <option value="bodyoil">Body Oil</option>
-            </select>
+              <h2><label for="products"> Category:</label></h2>
+              <select name="products" id="products" class="form-select" aria-label="Default select example">
+                  <option value="babypacifier" selected>Baby Pacifier</option>
+                  <option value="milkbottle">Milk Bottle</option>
+                  <option value="pram">Pram</option>
+                  <option value="stretchmark">Stretch Mark</option>
+                  <option value="vitamin">Vitamin</option>
+                  <option value="bodyoil">Body Oil</option>
+              </select>
             </div>
             </div>
 
