changed the buttons in homepage and login

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="/css/homepage.css">
     <title>Welcome, Mommy</title>
     <link
@@ -24,6 +23,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
       
   </style>
+  <link rel="stylesheet" href="/scss/button.css">
   </head>
 
   <body>
@@ -46,10 +46,10 @@
     <div id="environment">
         <div id="content">
             <section id="backgroundpic"></section>
-            <div class="bulletinhouse"><button onclick="location.href = './bulletin/bulletin.html';"class="btn1">Enter</button></div>
-            <div class="calendarhouse"><button onclick="location.href = '/calendar/calendar.html';" class="btn1">Enter</button></div>
-            <div class="profilehouse"><button onclick="location.href = '/profile.html';"class="btn1">Enter</button></div>
-            <div class="infohubhouse"><button onclick="location.href = '/aboutus.html';"class="btn1">Enter</button></div>
+            <div class="bulletinhouse"><button onclick="location.href = './bulletin/bulletin.html';"class="btn btn--stripe">Enter</button></div>
+            <div class="calendarhouse"><button onclick="location.href = '/calendar/calendar.html';" class="btn btn--stripe">Enter</button></div>
+            <div class="profilehouse"><button onclick="location.href = '/profile.html';"class="btn btn--stripe">Enter</button></div>
+            <div class="infohubhouse"><button onclick="location.href = '/aboutus.html';"class="btn btn--stripe">Enter</button></div>
         </div>
       </div>
 
