--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="/scss/maskbutton.css">
   </head>
   <body>
     <main>
@@ -48,8 +49,13 @@
                   />
                   <label>Password</label>
                 </div>
+                
 
-                <input type="submit" id="login" value="Sign In" class="sign-btn" />
+                <div style="width: 100%;" class="button-container-3">
+                  <span class="mas">Sign In</span>
+                <button id="login">Sign In</button>
+              </div>
+                <!-- <input type="submit" id="login" value="Sign In" class="sign-btn" /> -->
 
                 <p class="text">
                   Forgotten your password or login details?
@@ -129,8 +135,12 @@
                   />
                   <label>Password</label>
                 </div>
-
-                <input type="submit" value="Sign Up" id="regis" class="sign-btn" />
+                
+                <div style="width: 100%;" class="button-container-3">
+                  <span class="mas">Sign Up</span>
+                <button id="regis">Sign Up</button>
+              </div>
+                <!-- <input type="submit" value="Sign Up" id="regis" class="sign-btn" /> -->
 
                 <p class="text">
                   By signing up, I agree to the
