styling and linking

--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -43,7 +43,7 @@
             <div id="start" class="row">
               <img class="img-fluid" src="../img/freestocks-ux53SGpRAHU-unsplash.jpg" alt="">
               <div class="row jumbotron " >
-                <h1 class="display-5">Community's Recommendation</h1>
+                <h1 class="display-5">Community Recommendations</h1>
               </div>
             <!-- </div> -->
           </div>
@@ -58,18 +58,20 @@
           
         <div class="tag">
           <div class="result_dropbox row">
-            <div class="col-12">
+            <!-- <div class="col-12"> -->
               <br><br>
-              <h2><label for="products"> Category:</label></h2>
-              <select name="products" id="products" class="form-select" aria-label="Default select example">
-                  <option value="babypacifier" selected>Baby Pacifier</option>
-                  <option value="milkbottle">Milk Bottle</option>
-                  <option value="pram">Pram</option>
-                  <option value="stretchmark">Stretch Mark</option>
-                  <option value="vitamin">Vitamin</option>
-                  <option value="bodyoil">Body Oil</option>
-              </select>
-            </div>
+              <h2 style="margin-top:10vh;"><label for="products">Category</label></h2>
+              <div class="col-4" style="display:flex; justify-content:center;">
+                <select name="products" id="products" class="form-select " aria-label="Default select example">
+                    <option value="babypacifier" selected>Baby Pacifier</option>
+                    <option value="milkbottle">Milk Bottle</option>
+                    <option value="pram">Pram</option>
+                    <option value="stretchmark">Stretch Mark</option>
+                    <option value="vitamin">Vitamin</option>
+                    <option value="bodyoil">Body Oil</option>
+                </select>
+              </div>
+            <!-- </div> -->
             </div>
 
               <div class="row">
@@ -79,11 +81,11 @@
                 <div class="col-6">
                   <div class="podium">
               <table id="ladder" class="mx-auto">
-          <tr>
-            <td><h2 id="podium1"></h2></td>
-            <td><h2 id="podium0"></h2></td>
-            <td><h2 id="podium2"></h2></td>
-          </tr>
+                <tr>
+                  <td><h2 id="podium1"></h2></td>
+                  <td><h2 id="podium0"></h2></td>
+                  <td><h2 id="podium2"></h2></td>
+                </tr>
              </table>
             </div>
                 </div>
