displaying header for useful info and combining input fields and dropdown menu

--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,7 @@
         
           <div class="tag">  
             <div class="row before">
-                <div class="col-md-7 col-12">
+                <div class="col-xl-7 col-12">
                   <h3 style="margin-top:50px; font-weight: bold;">Our Mission</h3>
                     <p>
                       Expectant mothers tend to face great uncertainties and increased levels of anxiety when it comes to preparing for their pregnancy journey. Thus, PREPnancy, aims to address this issue and aid the expectant mothers in their exciting journey. PREPnancy is designed to empower expectant mothers with useful information and guide them through their pregnancy journey.
@@ -66,7 +66,7 @@
                     </p>
                 </div>
                 <div class="col-5 " style="margin-top:50px;" >
-                    <img class="img-fluid resize" src="img/aboutus.png" alt="">
+                    <img class="img-fluid resize d-none d-xl-block" src="img/aboutus.png" alt="">
                 </div>
             </div>
   
