useful info display

--- a/bulletin/quiz.html
+++ b/bulletin/quiz.html
@@ -36,7 +36,7 @@
   <div class="center">
     <div id="thankyou" hidden class="mx-auto" style="text-align:center;">
       <h1>Thank you for your contribution</h1>
-      <button onclick="location.href = 'bulletin.html';" class="buttonQuiz">Back to Polls</button>
+      <button onclick="location.href = 'bulletin.html';" class="buttonQuiz" style="margin-right:15px;">Back to Polls</button>
       <button onclick="location.href = 'bulletinresult.html';" class="buttonQuiz">To Summary Page</button>
     </div>
     <div id="register">
