--- a/usefulinfo.html
+++ b/usefulinfo.html
@@ -41,7 +41,7 @@
     </nav>
     
     <div class="container-fluid">
-      <div id="start">
+      <div id="start" class="row">
         <img class="img-fluid" src="img/ashton-mullins-y16sN3fCwIw-unsplash.jpg" alt="">
         <div class="row jumbotron " >
           <h1 class="display-5">Information Hub</h1>
