api call for useful info page

--- a/homepage.html
+++ b/homepage.html
@@ -46,7 +46,7 @@
         <div class="bulletinhouse"><button onclick="location.href = './bulletin/bulletin.html';"class="btn btn--stripe">Enter</button></div>
         <div class="calendarhouse"><button onclick="location.href = '/calendar/calendar.html';" class="btn btn--stripe">Enter</button></div>
         <div class="profilehouse"><button onclick="location.href = '/profile.html';"class="btn btn--stripe">Enter</button></div>
-        <div class="infohubhouse"><button onclick="location.href = '/aboutus.html';"class="btn btn--stripe">Enter</button></div>
+        <div class="infohubhouse"><button onclick="location.href = '/usefulinfo.html';"class="btn btn--stripe">Enter</button></div>
       </div>
     </div>
     
