--- a/homepage.html
+++ b/homepage.html
@@ -42,6 +42,7 @@
                 </li>
               </ul>
       </nav>
+      <p>Welcome, click to enter the different functions</p>
       <div id="content">
         <div class="bulletinhouse"><button onclick="location.href = './bulletin/bulletin.html';"class="btn btn--stripe">Enter</button></div>
         <div class="calendarhouse"><button onclick="location.href = '/calendar/calendar.html';" class="btn btn--stripe">Enter</button></div>
