--- a/bulletin/bulletin.html
+++ b/bulletin/bulletin.html
@@ -50,13 +50,13 @@
                     <div class="card1 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title"> Baby Pacifier</h2>
-                            <button class="btnn" onclick="choosing('babypacifier')">take a poll</button>
+                            <button class="btnn" onclick="choosing('baby pacifier')">take a poll</button>
                         </div>
                     </div>
                     <div class="card1 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title">Milk Bottle</h2>
-                            <button class="btnn" onclick="choosing('milkbottle')">take a poll</button>
+                            <button class="btnn" onclick="choosing('milk bottle')">take a poll</button>
                         </div>
                     </div>
                     <div class="card1 card col-3" style=" height:300px;">
@@ -72,24 +72,19 @@
                     <div class="card2 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title">Stretch Marks</h2>
-                            <button class="btnn" onclick="choosing('stretchmark')">take a poll</button>
+                            <button class="btnn" onclick="choosing('stretch mark')">take a poll</button>
                         </div>
-                        <!-- <img src="../img/stretch marks.png" alt="stretchmark" onclick="choosing('stretchmark')"> <br>
-                        <a href="quiz.html?topic=stretchmark">Stretch Mark</a>  -->
                     </div>
                     <div class="card2 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title">Vitamins</h2>
                             <button class="btnn" onclick="choosing('vitamin')">take a poll</button>
                         </div>
-                        <!-- <img src="../img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <br> <a href="quiz.html?topic=vitamin">Vitamins</a> -->
-                    </div>
-                    <!-- <img src="../img/vitamins.png" alt="vitamin" onclick="choosing('vitamin')"> <br> <a href="quiz.html?topic=vitamin">Vitamin</a>  -->
-                
+                    </div>                
                 <div class="card2 card col-3" style="height:300px;">
                     <div class="content">
                         <h2 class="title">Body Oils</h2>
-                        <button class="btnn" onclick="choosing('bodyoil')">take a poll</button>
+                        <button class="btnn" onclick="choosing('body oil')">take a poll</button>
                     </div>
                 </div>
                 </div>
