--- a/homepage.html
+++ b/homepage.html
@@ -42,13 +42,16 @@
                 </li>
               </ul>
       </nav>
-      <p>Welcome, click to enter the different functions</p>
       <div id="content">
         <div class="bulletinhouse"><button onclick="location.href = './bulletin/bulletin.html';"class="btn btn--stripe">Enter</button></div>
         <div class="calendarhouse"><button onclick="location.href = '/calendar/calendar.html';" class="btn btn--stripe">Enter</button></div>
         <div class="profilehouse"><button onclick="location.href = '/profile.html';"class="btn btn--stripe">Enter</button></div>
         <div class="infohubhouse"><button onclick="location.href = '/usefulinfo.html';"class="btn btn--stripe">Enter</button></div>
       </div>
+      <div class="d-flex justify-content-center">
+        <p>Click on the houses to access them !</p>
+        </div>
+
     </div>
     
 
