--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
 
       <div class="container about" id="about-me" style="margin-top:5vh;">
         <div>
-          <h2 style="font-size: 80px;">Profile</h2>
+          <h2 class='profile' style="font-size: 70px;">Profile</h2>
         </div>
         <div class="container-fluid">
           <div class="row">
