updated homepage: find the mysterious rectangle

--- a/homepage.html
+++ b/homepage.html
@@ -27,9 +27,6 @@
   </head>
 
   <body>
-    <div class="d-flex justify-content-left">
-      <p>Click on the houses to access them !</p>
-    </div>
     <div class="backgroundpic">
       <nav class="navbar">
         <div class="container-fluid">
@@ -57,7 +54,7 @@
           <div class="profilehouse col"><img onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
           </div>
           <div class="row">
-          <div class="infohubhouse col"><img onclick="location.href = '/usefulinfo.html';" style="display:block; width:18vw" src="./img/housetwo.png" alt=""><a</div>
+          <div class="infohubhouse col"><img onclick="location.href = '/usefulinfo.html';" style="display:block; width:18vw" src="./img/housetwo.png" alt=""></div>
         </div>
         </div>
       </div>
