--- a/bulletin/bulletin.html
+++ b/bulletin/bulletin.html
@@ -50,19 +50,19 @@
                     <div class="card1 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title"> Baby Pacifier</h2>
-                            <button class="btnn" onclick="choosing('baby pacifier')">take a poll</button>
+                            <button class="btnn" onclick="choosing('baby pacifiers')">take a poll</button>
                         </div>
                     </div>
                     <div class="card1 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title">Milk Bottle</h2>
-                            <button class="btnn" onclick="choosing('milk bottle')">take a poll</button>
+                            <button class="btnn" onclick="choosing('milk bottles')">take a poll</button>
                         </div>
                     </div>
                     <div class="card1 card col-3" style=" height:300px;">
                         <div class="content">
                             <h2 class="title">Pram</h2>
-                            <button class="btnn" onclick="choosing('pram')">take a poll</button>
+                            <button class="btnn" onclick="choosing('prams')">take a poll</button>
                         </div>
                     </div>
                 </div>
@@ -72,19 +72,19 @@
                     <div class="card2 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title">Stretch Marks</h2>
-                            <button class="btnn" onclick="choosing('stretch mark')">take a poll</button>
+                            <button class="btnn" onclick="choosing('stretch marks')">take a poll</button>
                         </div>
                     </div>
                     <div class="card2 card col-3" style="margin-right: 10px; height:300px;">
                         <div class="content">
                             <h2 class="title">Vitamins</h2>
-                            <button class="btnn" onclick="choosing('vitamin')">take a poll</button>
+                            <button class="btnn" onclick="choosing('vitamins')">take a poll</button>
                         </div>
                     </div>                
                 <div class="card2 card col-3" style="height:300px;">
                     <div class="content">
                         <h2 class="title">Body Oils</h2>
-                        <button class="btnn" onclick="choosing('body oil')">take a poll</button>
+                        <button class="btnn" onclick="choosing('body oils')">take a poll</button>
                     </div>
                 </div>
                 </div>
