--- a/homepage.html
+++ b/homepage.html
@@ -45,16 +45,24 @@
       <div id="content"> 
         <div class="container-fluid">
           <div class="row">
-            <div class="bulletinhouse col"><img onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw" src="./img/house4u.png" alt=""></div>
+            <!-- <div class="bulletinhouse col"> -->
+              <img class="bulletinhouse" onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw" src="./img/house4u.png" alt="">
+            <!-- </div> -->
           </div>
           <div class="row">
-            <div class="calendarhouse col"><img onclick="location.href = '/calendar/calendar.html';" style="display:block; width:18vw" src="./img/calendarhouse1.png" alt=""></div>
+            <!-- <div class="calendarhouse col"> -->
+              <img class="calendarhouse" onclick="location.href = '/calendar/calendar.html';" style="display:block; width:18vw" src="./img/calendarhouse1.png" alt="">
+            <!-- </div> -->
           </div>
           <div class="row">
-          <div class="profilehouse col"><img onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
+          <!-- <div class="profilehouse col"> -->
+            <img class="profilehouse" onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
+          <!-- </div> -->
           </div>
           <div class="row">
-          <div class="infohubhouse col"><img onclick="location.href = '/usefulinfo.html';" style="display:block; width:18vw" src="./img/housetwo.png" alt=""></div>
+          <!-- <div class="infohubhouse col"> -->
+            <img class="infohubhouse" onclick="location.href = '/usefulinfo.html';" style="display:block; width:18vw" src="./img/housetwo.png" alt="">
+          <!-- </div> -->
         </div>
         </div>
       </div>
