--- a/homepage.html
+++ b/homepage.html
@@ -42,29 +42,56 @@
                 </li>
               </ul>
       </nav>
-      <p>Click on the houses to enter !</p>
+      <!-- <p>Click on the houses to enter !</p> -->
       <div id="content"> 
         <div class="container-fluid">
           <div class="row">
-            <!-- <div class="bulletinhouse col"> -->
-              <img class="bulletinhouse " onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw;" src="./img/house4u.png" alt="">
-             
-            <!-- </div> -->
+            <!-- comment img-hover-image is bulletinhouse i-->
+            <div class="bulletinhouse">
+              <img onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw;" src="./img/house4u.png" alt="">
+               <div class="image-hover-text">
+                <div class="image-hover-text-bubble">
+                  <span class="image-hover-text-title">Click to Enter</span>
+                </div>
+               </div>
+          </div>
           </div>
           <div class="row">
+            <div class="calendarhouse">
             <!-- <div class="calendarhouse col"> -->
-              <img class="calendarhouse" onclick="location.href = '/calendar/calendar.html';" style="display:block; width:20vw" src="./img/calendarhouse1.png" alt="">
+              <img onclick="location.href = '/calendar/calendar.html';" style="display:block; width:20vw" src="./img/calendarhouse1.png" alt="">
+              <div class="image-hover-text">
+                <div class="image-hover-text-bubble">
+                  <span class="image-hover-text-title">Click to Enter</span>
+                </div>
             <!-- </div> -->
-          </div>
+            </div>
+            </div>
+         </div>
           <div class="row">
           <!-- <div class="profilehouse col"> -->
-            <img class="profilehouse" onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
+            <div class="profilehouse">
+              <img onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
+            <div class="image-hover-text">
+              <div class="image-hover-text-bubble">
+                <span class="image-hover-text-title">Click to Enter</span>
+              </div>
+            </div>
           <!-- </div> -->
           </div>
+          </div>
           <div class="row">
-          <!-- <div class="infohubhouse col"> -->
-            <img class="infohubhouse" onclick="location.href = '/usefulinfo.html';" style="display:block; width:22vw" src="./img/housetwo.png" alt="">
-          <!-- </div> -->
+          <div class="infohubhouse">
+            <img onclick="location.href = '/usefulinfo.html';" style="display:block; width:22vw" src="./img/housetwo.png" alt="">
+            <div class="image-hover-text">
+              <div class="image-hover-text-bubble">
+                <span class="image-hover-text-title">Click to Enter</span>
+              </div>
+            </div>
+          </div>
+        </div>
+    
+          </div>
         </div>
         </div>
       </div>
@@ -86,4 +113,5 @@
 
 </body>
 </html>
+
 
