--- a/homepage.html
+++ b/homepage.html
@@ -49,13 +49,13 @@
       <div id="overlay" class="cover blur-in"> 
         <div class="container-fluid content">
           <div class="row">
-            <h2 class="profile animate__animated animate__fadeOut animate__delay-5s">Welcome</h2>
-            <h5 class="profile animate__animated animate__fadeOut animate__delay-5s" style="font-weight:normal">Click on the houses to explore!</h5>
+            <h2 class="profile animate__animated animate__fadeOut animate__delay-5s" style="color:rgb(163, 116, 116)">Welcome</h2>
+            <h5 class="profile" style="color:rgb(163, 116, 116)">Click on the houses to explore!</h5>
           </div>
           <div class="row">
             <!-- comment img-hover-image is bulletinhouse i-->
             <div class="bulletinhouse">
-              <img onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw;" src="./img/house4u.png" alt="">
+              <img id="bulletinhouse" onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw;" src="./img/house4u.png" alt="">
                <div class="image-hover-text">
                 <div class="image-hover-text-bubble">
                   <span class="image-hover-text-title">Click to Enter</span>
@@ -113,6 +113,7 @@
   <!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
 <!-- https://stackoverflow.com/questions/67248505/how-do-i-make-an-image-move-on-keys-up-down-left-right-->
 <!-- https://www.svgbackgrounds.com/svg-backgrounds-to-html/ -->
+<script src="/js/homepagehover.js"></script>
 </body>
 </html>
 
