--- a/homepage.html
+++ b/homepage.html
@@ -56,9 +56,9 @@
             <!-- comment img-hover-image is bulletinhouse i-->
             <div class="bulletinhouse">
               <img id="bulletinhouse" onclick="location.href = '/bulletin/bulletin.html';" style="display:block; width:18vw;" src="./img/house4u.png" alt="">
-               <div class="image-hover-text">
-                <div class="image-hover-text-bubble">
-                  <span class="image-hover-text-title">Click to Enter</span>
+               <!-- <div class="image-hover-text"> -->
+                <div class="image-hover-text-bubble" id="bulletinhousehover">
+                  <span class="image-hover-text-title">Recommended products to our community</span>
                 </div>
                </div>
           </div>
@@ -66,35 +66,34 @@
           <div class="row">
             <div class="calendarhouse">
             <!-- <div class="calendarhouse col"> -->
-              <img onclick="location.href = '/calendar/calendar.html';" style="display:block; width:20vw" src="./img/calendarhouse1.png" alt="">
-              <div class="image-hover-text">
-                <div class="image-hover-text-bubble">
-                  <span class="image-hover-text-title">Click to Enter</span>
+              <img id="calendarhouse" onclick="location.href = '/calendar/calendar.html';" style="display:block; width:20vw" src="./img/calendarhouse1.png" alt="">
+              <!-- <div class="image-hover-text"> -->
+                <div class="image-hover-text-bubble"  id="calendarhousehover">
+                  <span class="image-hover-text-title">Track your upcoming appointments</span>
                 </div>
+            </div>
             <!-- </div> -->
-            </div>
-            </div>
          </div>
           <div class="row">
           <!-- <div class="profilehouse col"> -->
             <div class="profilehouse">
-              <img onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
-            <div class="image-hover-text">
-              <div class="image-hover-text-bubble">
-                <span class="image-hover-text-title">Click to Enter</span>
+              <img id="profilehouse" onclick="location.href = '/profile.html';" style="display:block; width:18vw" src="./img/housethree.png" alt="">
+            <!-- <div class="image-hover-text"> -->
+              <div class="image-hover-text-bubble"  id="profilehousehover">
+                <span class="image-hover-text-title">Amend your account details</span>
               </div>
-            </div>
+            <!-- </div> -->
           <!-- </div> -->
           </div>
           </div>
           <div class="row">
           <div class="infohubhouse">
-            <img onclick="location.href = '/usefulinfo.html';" style="display:block; width:22vw" src="./img/housetwo.png" alt="">
-            <div class="image-hover-text">
-              <div class="image-hover-text-bubble">
-                <span class="image-hover-text-title">Click to Enter</span>
+            <img id="infohubhouse" onclick="location.href = '/usefulinfo.html';" style="display:block; width:22vw" src="./img/housetwo.png" alt="">
+            <!-- <div class="image-hover-text"> -->
+              <div class="image-hover-text-bubble" id="infohubhousehover">
+                <span class="image-hover-text-title">Look for useful information</span>
               </div>
-            </div>
+            <!-- </div> -->
           </div>
         </div>
     
