responsiveness of podium for bulletin

--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -75,10 +75,10 @@
             </div>
 
               <div class="row">
-                <div class="col-6">
+                <div class="col-6 col-sm-4col-sm-push-8">
                   <div id="results" class="d-flex justify-content-center"></div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-sm-4 col-sm-push-8">
                   <div class="podium">
               <table id="ladder" class="mx-auto">
                 <tr>
