--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Javascript Calendar</title>
+    <title>Calendar</title>
     <link href="/css/calendar.css" rel="stylesheet">
     <script defer src="/js/calendar.js"></script>
     <link
@@ -64,7 +64,7 @@
 
   <div class="row">
     <footer class="footer">
-      <div class="container-fluid" style="text-align:center;">
+      <div class="container-fluid" style="text-align:center; bottom:0 ; right:0">
         
           <div class="row" >
             <div class="col-sm-2 pb-4"><img src= '../img/logo2.png' style="width: 125px;margin:auto;"></div>
