--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -23,7 +23,7 @@
   </style>
   </head>
 
-  <body>
+  <body style="display: flex; min-height: 100vh; flex-direction: column; justify-content: space-between;">
     <nav class="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="/homepage.html">
