--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -75,10 +75,10 @@
             </div>
 
               <div class="row">
-                <div class="col-6 col-sm-4col-sm-push-8">
+                <div class="col-md-6">
                   <div id="results" class="d-flex justify-content-center"></div>
                 </div>
-                <div class="col-6 col-sm-4 col-sm-push-8">
+                <div class="col-md-6">
                   <div class="podium">
               <table id="ladder" class="mx-auto">
                 <tr>
@@ -138,10 +138,6 @@
 
     <!-- Axios -->
     <script src='https://unpkg.com/axios/dist/axios.js'></script>
-    <!-- <script src="https://www.rgraph.net/libraries/RGraph.common.core.js"></script> -->
-<!-- <script src="https://www.rgraph.net/libraries/RGraph.bar.js"></script> -->
-
-<!-- <canvas id="cvs" width="500" height="600" class="d-block mx-auto"></canvas> -->
     <script src="../js/database.js" type="module"></script>  
     <script src="../js/aboutus.js"></script>
     </body>
