--- a/usefulinfo.html
+++ b/usefulinfo.html
@@ -79,13 +79,13 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="padding-left:20px; padding-right:20px;">
               <div class="col-1"></div>
-              <div id="display" class="col-7" style="margin-bottom:15vh;">
+              <div id="display" class="col-sm-7" style="margin-bottom:15vh;">
                 <!-- <h2>Headline</h2> -->
                 <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus harum assumenda unde earum ipsum inventore voluptatem eos, dolor quisquam debitis nostrum similique nisi numquam consequuntur quibusdam molestias quam beatae maxime?</p> -->
               </div>
-              <div class="col-3" style="margin-left:30px;">
+              <div class="col-sm-3" style="padding-left:10px;">
                 <p>Information sourced from the National Health Service, the UK's biggest health website. </p>
                 <p style="font-weight:bold; margin-top:20px;">Disclaimer:</p>
                 <p style="margin-bottom:10vh;">This website does not provide medical advice nor purports to do so. The contents of this website are meant purely for informational and educational purposes only. The website is not a substitute for medical advice, diagnosis, treatment or professional care. If you have or suspect you have a health problem, you should consult a doctor or a qualified healthcare provider. Do not disregard professional medical advice or delay in seeking it because of something you have read on this website.</p>
