--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -12,7 +12,6 @@
      crossorigin='anonymous'>
      <link rel="stylesheet" href="../css/styleM.css">
      <link rel="stylesheet" href="../css/quiz.css">
-     <link rel="stylesheet" href="../css/podium.css">
     <title>Community Recommendations</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -21,6 +20,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
       
   </style>
+  <link rel="stylesheet" href="../css/podium.css">
 </head>
 <body>
   <nav class="navbar">
@@ -61,14 +61,14 @@
             <!-- <div class="col-12"> -->
               <br><br>
               <h2 style="margin-top:10vh;"><label for="products">Category</label></h2>
-              <div class="col-4" style="display:flex; justify-content:center;">
+              <div class="col-7" style="display:flex; justify-content:center;">
                 <select name="products" id="products" class="form-select " aria-label="Default select example">
-                    <option value="babypacifier" selected>Baby Pacifier</option>
-                    <option value="milkbottle">Milk Bottle</option>
-                    <option value="pram">Pram</option>
-                    <option value="stretchmark">Stretch Mark</option>
-                    <option value="vitamin">Vitamin</option>
-                    <option value="bodyoil">Body Oil</option>
+                    <option value="babypacifiers" selected>Baby Pacifier</option>
+                    <option value="milkbottles">Milk Bottle</option>
+                    <option value="prams">Pram</option>
+                    <option value="stretchmarks">Stretch Mark</option>
+                    <option value="vitamins">Vitamin</option>
+                    <option value="bodyoils">Body Oil</option>
                 </select>
               </div>
             <!-- </div> -->
