styling bulletin result page

--- a/bulletin/bulletinresult.html
+++ b/bulletin/bulletinresult.html
@@ -60,7 +60,7 @@
           <div class="result_dropbox row">
             <!-- <div class="col-12"> -->
               <br><br>
-              <h2 style="margin-top:10vh;"><label for="products">Category</label></h2>
+              <h2 style="margin-top:10vh;text-align: center; font-family: 'Playfair Display', serif;margin-bottom: 4vh;;"><label for="products">Category</label></h2>
               <div class="col-7" style="display:flex; justify-content:center;">
                 <select name="products" id="products" class="form-select " aria-label="Default select example">
                     <option value="babypacifiers" selected>Baby Pacifier</option>
